# celebtwin

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: python-app.yml
celebtwin/: __init__.py  __main__.py  api.py  main.py  params.py  utils.py
celebtwin/api/: fast.py
celebtwin/interface/: main_local.py
celebtwin/logic/: ann.py  annenums.py  annoy.py  data.py  detection.py  experiment.py  model.py  preproc_face.py  registry.py
celebtwin/ml_logic/: annoy.py  data.py  encoders.py  experiment.py  model.py  preproc_face.py  preprocessor.py  registry.py
