[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "celebtwin",
  "celebtwin.logic",
]

[project]
name = "celebtwin"
version = "0.1"
description = "Who is your celebrity twin?"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
]
authors = [
    {name = "Cyrille Prudhomme", email = "cyrille.prudhomme@gmail.com"},
    {name = "David Allouche", email = "david@allouche.net"},
    {name = "Timothée Farines", email = "timothee.farines@gmail.com"},
    {name = "Léonce Nzamba", email = "leonce.nzamba@gmail.com"},
    ]

dependencies = [
  "annoy==1.17.3", # Update Dockerfile when updating this version.
  "click",
  "colorama",
  "decorator",
  "deepface",
  "fastapi",
  "google-cloud-storage",
  "hnswlib",
  "keras",
  "mtcnn",
  "numpy",
  "opencv-python",
  "python-multipart",
  "tensorflow-cpu; sys_platform != 'darwin' and 'x86_64' in platform_version", # Use CPU version on non-Mac systems
  "tensorflow-metal; sys_platform == 'darwin' and 'ARM' in platform_version", # GPU acceleration for Mac M-chips
  "tensorflow",
  "tf_keras",
  "tqdm",
  "uvicorn",
]

[project.urls]
Homepage = "https://github.com/celebtwin/celebtwin"
Repository = "https://github.com/celebtwin/celebtwin.git"

[dependency-groups]
dev = [
  "ipdb",
  "ipykernel",
  "ipython>=8.37.0",
  "isort>=6.0.1",
  "matplotlib",
  "mypy",
  "pandas",
  "pip-tools",
  "pycodestyle>=2.14.0",
  "ruff",
  "scikit-learn",
  "seaborn",
  "types-colorama",
  "types-decorator",
  "types-tensorflow",
  "types-tqdm",
]

[project.scripts]
celebtwin = "celebtwin.main:main"
